- Change License extension\n- Name and summary\n- Add css file\n- Add background animation.

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,26 @@
 <html>
     <head>
+        <title>Bert Van Poecke</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="main.css" />
+		<noscript><link rel="stylesheet" href="noscript.css" /></noscript>
         <script src="//localhost:9091"></script>
-        <script src="bundle.js"></script>
-        <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <p>Hello World</p>
+        <canvas id="canvas"></canvas>
+        <div class="content_info">
+            <header id="header">
+                    <h1>Bert Van Poecke</h1>
+                    <p>Software Engineer @ <a href="https://www.esko.com">Esko</a> &nbsp;&bull;&nbsp; Fervent percussionist, Chiro man, zeiler en wetenschapsfanaat.</p>
+                    <div class="links">
+                        <a href="https://www.linkedin.com/in/bertvanpoecke/"><span class="btn"><i class="fa fa-linkedin"></i></span></a>
+                        <a href="https://twitter.com/bertvanpoecke"><span class="btn"><i class="fa fa-twitter"></i></span></a>
+                        <a href="https://www.instagram.com/bertvanpoecke"><span class="btn"><i class="fa fa-instagram"></i></span></a>
+                        <a href="https://github.com/bertvanpoecke"><span class="btn"><i class="fa fa-github"></i></span></a>
+                    </div>
+            </header>
+        </div>
     </body>
+    <script src="bundle.js"></script>
 </html>
