Add favicon support

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,11 @@
     <head>
         <title>Bert Van Poecke</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="main.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <meta name="description" content="Bert Van Poecke">
+        <meta name="author" content="Bert Van Poecke">
+        <link rel="stylesheet" href="main.css" />
+        <link rel="icon" type="image/png" href="img/favicon-192x192.png" sizes="192x192">
 		<noscript><link rel="stylesheet" href="noscript.css" /></noscript>
         <script src="//localhost:9091"></script>
     </head>
