--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
         <meta name="author" content="Bert Van Poecke">
         <link rel="stylesheet" href="main.css" />
         <link rel="icon" type="image/png" href="img/favicon-192x192.png" sizes="192x192">
+        <link rel="apple-touch-icon" href="img/apple-touch-icon-180x180.png" sizes="180x180">
 		<noscript><link rel="stylesheet" href="noscript.css" /></noscript>
         <script src="//localhost:9091"></script>
     </head>
