--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="Bert Van Poecke">
         <meta name="author" content="Bert Van Poecke">
         <link rel="stylesheet" href="main.css" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link rel="icon" type="image/png" href="img/favicon-192x192.png" sizes="192x192">
         <link rel="apple-touch-icon" href="img/apple-touch-icon-180x180.png" sizes="180x180">
 		<noscript><link rel="stylesheet" href="noscript.css" /></noscript>
@@ -18,10 +19,10 @@
                     <h1>Bert Van Poecke</h1>
                     <p>Software Engineer @ <a href="https://www.esko.com">Esko</a> &nbsp;&bull;&nbsp; Fervent percussionist, Chiro man, zeiler en wetenschapsfanaat.</p>
                     <div class="links">
-                        <a href="https://www.linkedin.com/in/bertvanpoecke/"><span class="btn"><i class="fa fa-linkedin"></i></span></a>
-                        <a href="https://twitter.com/bertvanpoecke"><span class="btn"><i class="fa fa-twitter"></i></span></a>
-                        <a href="https://www.instagram.com/bertvanpoecke"><span class="btn"><i class="fa fa-instagram"></i></span></a>
-                        <a href="https://github.com/bertvanpoecke"><span class="btn"><i class="fa fa-github"></i></span></a>
+                        <a href="https://www.linkedin.com/in/bertvanpoecke/"><span class="icon"><i class="fab fa-linkedin"></i></span></a>
+                        <a href="https://twitter.com/bertvanpoecke"><span class="icon"><i class="fab fa-twitter"></i></span></a>
+                        <a href="https://www.instagram.com/bertvanpoecke"><span class="icon"><i class="fab fa-instagram"></i></span></a>
+                        <a href="https://github.com/bertvanpoecke"><span class="icon"><i class="fab fa-github"></i></span></a>
                     </div>
             </header>
         </div>
