--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,22 @@
         <script src="//localhost:9091"></script>
     </head>
     <body>
-        <canvas id="canvas"></canvas>
-        <div class="content_info">
-            <header id="header">
-                    <h1>Bert Van Poecke</h1>
+        <div class="split left">
+            <canvas id="canvas"></canvas>
+            <div class="hi content_info">
+                <svg width="100%" height="100%">
+                    <rect width="100%" height="100%" fill="#000" x="0" y="0" fill-opacity="1" mask="url(#knockout-text)"/>
+                    <mask id="knockout-text">
+                        <rect width="100%" height="100%" fill="#fff" x="0" y="0" />
+                        <text x="50%" y="50%" fill="#000" text-anchor="middle" alignment-baseline="middle">Hi.</text>
+                    </mask>
+                </svg>
+            </div>
+        </div>
+        <div class="split right">
+            <div class="content_info">
+                <header id="header">
+                    <h1>BERT<br>VAN POECKE</h1>
                     <p>Software Engineer @ <a href="https://www.esko.com">Esko</a> &nbsp;&bull;&nbsp; Fervent percussionist, Chiro man, zeiler en wetenschapsfanaat.</p>
                     <div class="links">
                         <a href="https://www.linkedin.com/in/bertvanpoecke/"><span class="icon"><i class="fab fa-linkedin"></i></span></a>
@@ -24,7 +36,8 @@
                         <a href="https://www.instagram.com/bertvanpoecke"><span class="icon"><i class="fab fa-instagram"></i></span></a>
                         <a href="https://github.com/bertvanpoecke"><span class="icon"><i class="fab fa-github"></i></span></a>
                     </div>
-            </header>
+                </header>
+            </div>
         </div>
     </body>
     <script src="bundle.js"></script>
